# tutor_agent

./: .env.template  .gitignore  Dockerfile  Dockerfile.uv  README.md  __main__.py  cleaned_request.json  client.py  debug_server.py  example_request.json  main.py  pyproject.toml  requirements.txt  test_request.sh  tutor_agent.py  tutor_agent_postman_collection.json  tutor_task_manager.py
